Add audio playback and table column sorting.

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -140,6 +140,7 @@
 
 
 
+<!--
         <div id="sidebar-second" class="col-md-3 col-md-pull-9">
           <div class="well">
             <h2>About Stanford Cardinal</h2>
@@ -148,6 +149,9 @@
             <p>Stanford Cardinal can be used only for the official websites of University academic departments, centers, research groups and administrative units. It is available by request for this purpose.</p>
             <p><a class="more-link" href="http://helpsu.stanford.edu/?pcat=stanfordhomepage"><i class="fa fa-chevron-circle-right"></i> <span>Request Stanford Cardinal</span></a></p>
           </div>
+-->
+
+<!--
           <div class="well">
             <h2>In the Spotlight</h2>
             <img src="assets/cardinal/images/samples/LemonsNTower1170.jpg" alt="" />
@@ -157,6 +161,7 @@
             <p><a class="more-link" href="#"><i class="fa fa-chevron-circle-right"></i> <span>More information</span></a></p>
           </div>
         </div>
+-->
 
 
       </div>
@@ -204,7 +209,7 @@
         <!-- #bottom-logo end -->
         <div id="bottom-text" class="col-xs-6 col-sm-10">
           <ul>
-            <li class="home"><a target="_blank" href="https://library.stanford.edu/music">Stanford Music Library</a></li>
+            <li class="home"><a target="_blank" href="http://library.stanford.edu/blogs/stanford-libraries-blog/2015/11/piano-roll-scanner-project-prsp">Stanford Piano Roll Scanner Project</a></li>
           </ul>
         </div>
         <!-- .bottom-text end -->
