Add stats in header.

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -53,6 +53,7 @@
     
     <!--=== Header ===-->
     <div id="header" class="clearfix" role="banner">
+<div id="stats">Stats go here</div>
       <div class="container">
         <div class="row">
           <div class="col-md-8"> 
