--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -225,6 +225,15 @@
 </div>
 <!-- END footer --> 
 
+<!-- Global site tag (gtag.js) - Google Analytics -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=UA-139081373-1"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+  gtag('config', 'UA-139081373-1');
+</script>
+
 </body>
 </html>
 
