Added random-performance page.

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -101,10 +101,11 @@
 
             <div  role="navigation">
               <div id="primary-nav">
-                <ul class="nav navbar-nav" aria-label="primary navigation">
+                <ul class="highlight nav navbar-nav" aria-label="primary navigation">
                   <li id="nav-home"> <a href="/">Home</a></li>
                   <li id="nav-1"> <a href="/about">About</a> </li>
-                  <li id="nav-2"> <a target="_blank" href="https://github.com/pianoroll/SUPRA">Github</a> </li>
+                  <li id="nav-2"> <a href="/random">Random</a> </li>
+                  <li id="nav-3"> <a target="_blank" href="https://github.com/pianoroll/SUPRA">Github</a> </li>
 <!--
                    <ul class="dropdown-menu">
                      <li><a  href="#">Submenu 1</a></li>
