--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -98,27 +98,9 @@
               </form>
             </div>
 -->
+		{% include navigation-bar.html %}
 
-            <div  role="navigation">
-              <div id="primary-nav">
-                <ul class="highlight nav navbar-nav" aria-label="primary navigation">
-                  <li id="nav-home"> <a href="/">Home</a></li>
-                  <li id="nav-1"> <a href="/about">About</a> </li>
-                  <li id="nav-2"> <a href="/random">Random</a> </li>
-                  <li id="nav-3"> <a target="_blank" href="https://github.com/pianoroll/SUPRA">Github</a> </li>
-<!--
-                   <ul class="dropdown-menu">
-                     <li><a  href="#">Submenu 1</a></li>
-                     <li><a  href="#">Submenu 2</a></li>
-                     <li><a  href="#">Submenu 3</a></li>
-                     <li><a  href="#">Submenu 4</a></li>
-                     <li><a  href="#">Submenu 5</a></li>
-                   </ul>
--->
-                  </li>
-                </ul>
-              </div>
-            </div>
+
           </div>
           <!-- /nav-collapse --> 
         </div>
