Added statistics page.

--- a/_includes/navigation-bar.html
+++ b/_includes/navigation-bar.html
@@ -3,20 +3,18 @@
    <div id="primary-nav">
       <ul class="highlight nav navbar-nav" aria-label="primary navigation">
          <li id="nav-home"> <a href="/">Home</a></li>
-         <li id="nav-1"> <a href="/about">About</a> </li>
+	<li id="nav-1"><a href="#" class="dropdown-toggle" data-toggle="dropdown">About <b class="caret"></b></a>
+		<ul class="dropdown-menu">
+			<li><a href="/about">Overview</a></li>
+			<li><a href="/stats">Statistics</a></li>
+		</ul>
+	</li>
          <li id="nav-2"> <a href="/random">Random</a> </li>
          <li id="nav-3"> <a href="/sv">Sonic Visualiser</a> </li>
          <li id="nav-4"> <a target="_blank" href="https://github.com/pianoroll/SUPRA">Github</a> </li>
-<!--
-   <ul class="dropdown-menu">
-   <li><a  href="#">Submenu 1</a></li>
-   <li><a  href="#">Submenu 2</a></li>
-   <li><a  href="#">Submenu 3</a></li>
-   <li><a  href="#">Submenu 4</a></li>
-   <li><a  href="#">Submenu 5</a></li>
-   </ul>
-</li>
--->
+
+
 </ul>
 </div>
 </div>
+
