--- a/styles/custom.css
+++ b/styles/custom.css
@@ -71,5 +71,27 @@ h1 {
 	color: #8c1515;
 }
 
+td {
+	vertical-align: baseline;
+	padding-right: 10px;
+}
+
+th {
+	color: #820000;
+	cursor: pointer;
+}
+
+tr:hover {
+	background: #f3f3f3;
+}
+
+a {
+	text-decoration: none;
+}
+
+a.searchworks:hover, a.purl:hover {
+	text-decoration: underline;
+}
+
 
 
