--- a/_includes/navigation-bar.html
+++ b/_includes/navigation-bar.html
@@ -1,20 +1,22 @@
-
 <div  role="navigation">
    <div id="primary-nav">
       <ul class="highlight nav navbar-nav" aria-label="primary navigation">
          <li id="nav-home"> <a href="/">Home</a></li>
-	<li id="nav-1"><a href="#" class="dropdown-toggle" data-toggle="dropdown">About <b class="caret"></b></a>
-		<ul class="dropdown-menu">
-			<li><a href="/about">Overview</a></li>
-			<li><a href="/stats">Statistics</a></li>
-		</ul>
-	</li>
-         <li id="nav-2"> <a href="/random">Random</a> </li>
-         <li id="nav-3"> <a href="/sv">Sonic Visualiser</a> </li>
-         <li id="nav-4"> <a target="_blank" href="https://github.com/pianoroll/SUPRA">Github</a> </li>
+         <li id="nav-1">
+            <a href="#" class="dropdown-toggle" data-toggle="dropdown">About <b class="caret"></b></a>
+            <ul class="dropdown-menu">
+               <li><a href="/about">Overview</a></li>
+               <li><a href="/stats">Statistics</a></li>
+            </ul>
+         </li>
+         <li id="nav-2"> <a href="/performers">Performers</a> </li>
+         <li id="nav-3"> <a href="/composers">Composers</a> </li>
+         <li id="nav-4"> <a href="/random">Random</a> </li>
+         <li id="nav-5"> <a href="/sv">Sonic Visualiser</a> </li>
+         <li id="nav-6"> <a target="_blank" href="https://github.com/pianoroll/SUPRA">Github</a> </li>
+      </ul>
+   </div>
+</div>
 
 
-</ul>
-</div>
-</div>
 
