--- a/_includes/scripts/scripts-common.html
+++ b/_includes/scripts/scripts-common.html
@@ -231,13 +231,13 @@ function MakeRollTableRows(list) {
 
 		output += "<td>";
 		if (list[i].ROLL_TYPE) {
-			// https://github.com/pianoroll/SUPRA/blob/master/welte-red/midi-exp/bc072xf6791-exp.mid?raw=true
+			// https://github.com/pianoroll/SUPRA/blob/master/welte-red/midi-exp/bc072xf6791_exp.mid?raw=true
 			output += "<span class='midi'>";
 			output += "<a title='Link to Expressive MIDI file' target='midi' href='";
 			output += "https://github.com/pianoroll/SUPRA/blob/master/";
 			output += list[i].ROLL_TYPE.trim();
 			output += "/midi-exp/";
-			output += list[i].DRUID.trim() + "-exp.mid?raw=true";
+			output += list[i].DRUID.trim() + "_exp.mid?raw=true";
 			output += "'>Mexp</a>";
 			output += "</span>";
 		}
@@ -245,13 +245,13 @@ function MakeRollTableRows(list) {
 
 		output += "<td>";
 		if (list[i].ROLL_TYPE) {
-			// https://github.com/pianoroll/SUPRA/blob/master/welte-red/midi-raw/bc072xf6791-raw.mid?raw=true
+			// https://github.com/pianoroll/SUPRA/blob/master/welte-red/midi-raw/bc072xf6791_raw.mid?raw=true
 			output += "<span class='midi'>";
 			output += "<a title='Link to Raw MIDI file' target='midi' href='";
 			output += "https://github.com/pianoroll/SUPRA/blob/master/";
 			output += list[i].ROLL_TYPE.trim();
 			output += "/midi-raw/";
-			output += list[i].DRUID.trim() + "-raw.mid?raw=true";
+			output += list[i].DRUID.trim() + "_raw.mid?raw=true";
 			output += "'>Mraw</a>";
 			output += "</span>";
 		}
