--- a/_includes/navigation-bar.html
+++ b/_includes/navigation-bar.html
@@ -6,6 +6,7 @@
             <a href="#" class="dropdown-toggle" data-toggle="dropdown">About <b class="caret"></b></a>
             <ul class="dropdown-menu">
                <li><a href="/about">Overview</a></li>
+               <li><a href="/bib">Bibliography</a></li>
                <li><a href="/stats">Statistics</a></li>
             </ul>
          </li>
