Adding links page.

--- a/_includes/navigation-bar.html
+++ b/_includes/navigation-bar.html
@@ -7,8 +7,9 @@
             <ul class="dropdown-menu">
                <li><a href="/about">Overview</a></li>
                <li><a href="/duplicates">Duplicates</a></li>
-               <li><a href="/bib">Bibliography</a></li>
                <li><a href="/stats">Statistics</a></li>
+               <li><a href="/links">Links</a></li>
+               <li><a href="/bib">Bibliography</a></li>
             </ul>
          </li>
          <li id="nav-2"> <a href="/performers">Performers</a> </li>
