--- a/_includes/scripts/scripts-common.html
+++ b/_includes/scripts/scripts-common.html
@@ -267,6 +267,17 @@ function MakeRollTableRows(list, peeps) {
 		output += "</span>";
 		output += "</td>";
 
+		output += "<td>";
+		// http://ccrma.stanford.edu/~craig/piano-roll-project/supra/welte-red/mp3-exp/bc072xf6791.mp3
+		output += "<span class='mp3'>";
+		output += "<a title='Link to MP3 audio file' target='audio' href='";
+		output += "https://ccrma.stanford.edu/~craig/piano-roll-project/supra/welte-red/mp3-exp/";
+		output += list[i].DRUID.trim() + ".mp3'>";
+		output += "MP3";
+		output += "</a>";
+		output += "</span>";
+		output += "</td>";
+
 		output += "</tr>";
 	}
 	return output;
