--- a/_includes/scripts/scripts-common.html
+++ b/_includes/scripts/scripts-common.html
@@ -142,8 +142,8 @@ function PreparePerson(entry, peeps) {
 	entry = entry.replace("-\)", "&ndash;)");
 	entry = entry
 		.replace(" Nikolayevich", "")
-		.replace(" Konstantinovich", "")
-		.replace("-Bartholdy", "");
+		// .replace("-Bartholdy", "")
+		.replace(" Konstantinovich", "");
 	var nombre = entry;
 	var dates = "";
 	if (matches = entry.match(/^\s*(.*)\s+(\(.*\))\s*$/)) {
@@ -374,7 +374,7 @@ function DisplayPianists(list, selector, peeps) {
 		pdeath = 0;
 
 		if (PEEPS[plist[i][1]] && PEEPS[plist[i][1]].DATES) {
-			matches = PEEPS[plist[i][1]].DATES.match(/(\d{4})-(\d{4})/);
+			matches = PEEPS[plist[i][1]].DATES.match(/([\d\/]+)-([\d\/]+)/);
 			if (matches) {
 				pbirth = matches[1];
 				pdeath = matches[2];
@@ -382,19 +382,19 @@ function DisplayPianists(list, selector, peeps) {
 		}
 
 		var person  = PreparePerson(plist[i][1], null);
-		matches = person.match(/\((\d{4})&ndash;(\d{4})\)/);
+		matches = person.match(/\(([\d\/]+)&ndash;([\d\/]+)\)/);
 		if (matches) {
 			birth = matches[1];
 			death = matches[2];
-			person = person.replace(/\(\d{4}&ndash;\d{4}\)/, "");
-		} else if (matches = person.match(/\(&ndash;(\d{4})\)/)) {
+			person = person.replace(/\([\d\/]+&ndash;[\d\/]+\)/, "");
+		} else if (matches = person.match(/\(&ndash;([\d\/]+)\)/)) {
 			death = matches[1];
 			birth = "";
-			person = person.replace(/\(&ndash;\d{4}\)/, "");
-		} else if (matches = person.match(/\((\d{4})&ndash;\)/)) {
+			person = person.replace(/\(&ndash;[\d\/]+\)/, "");
+		} else if (matches = person.match(/\(([\d\/]+)&ndash;\)/)) {
 			birth = matches[1];
 			death = "";
-			person = person.replace(/\(\d{4}&ndash;\)/, "");
+			person = person.replace(/\([\d\/]+&ndash;\)/, "");
 		} else {
 			birth = "";
 			death = "";
@@ -404,7 +404,7 @@ function DisplayPianists(list, selector, peeps) {
 		output += "</td>"
 
 		if (PEEPS[person] && PEEPS[person].DATES) {
-			matches = PEEPS[person].DATES.match(/(\d{4})-(\d{4})/);
+			matches = PEEPS[person].DATES.match(/([\d\/]+)-([\d\/]+)/);
 			if (matches) {
 				birth = matches[1];
 				death = matches[2];
@@ -520,7 +520,7 @@ function DisplayComposers(list, selector, peeps) {
 		pdeath = 0;
 
 		if (PEEPS[plist[i][1]] && PEEPS[plist[i][1]].DATES) {
-			matches = PEEPS[plist[i][1]].DATES.match(/(\d{4})-(\d{4})/);
+			matches = PEEPS[plist[i][1]].DATES.match(/([\d\/]+)-([\d\/]+)/);
 			if (matches) {
 				pbirth = matches[1];
 				pdeath = matches[2];
@@ -529,19 +529,19 @@ function DisplayComposers(list, selector, peeps) {
 
 		var preperson = plist[i][1].replace(/; Grof.*/, "");
 		var person = PreparePerson(preperson, null);
-		matches = person.match(/\((\d{4})&ndash;(\d{4})\)/);
+		matches = person.match(/\(([\d\/]+)&ndash;([\d\/]+)\)/);
 		if (matches) {
 			birth = matches[1];
 			death = matches[2];
-			person = person.replace(/\(\d{4}&ndash;\d{4}\)/, "");
-		} else if (matches = person.match(/\(&ndash;(\d{4})\)/)) {
+			person = person.replace(/\([\d\/]+&ndash;[\d\/]+\)/, "");
+		} else if (matches = person.match(/\(&ndash;([\d\/]+)\)/)) {
 			death = matches[1];
 			birth = "";
-			person = person.replace(/\(&ndash;\d{4}\)/, "");
-		} else if (matches = person.match(/\((\d{4})&ndash;\)/)) {
+			person = person.replace(/\(&ndash;[\d\/]+\)/, "");
+		} else if (matches = person.match(/\(([\d\/]+)&ndash;\)/)) {
 			birth = matches[1];
 			death = "";
-			person = person.replace(/\(\d{4}&ndash;\)/, "");
+			person = person.replace(/\(([\d\/]+)&ndash;\)/, "");
 		} else {
 			birth = "";
 			death = "";
